# Branches_Cleanup

./: README.md  pyproject.toml  requirements.txt
src/branches_cleanup/: branch_report.py  cli.py  github_client.py  main.py  report_gen.py
tests/: test_branch_report.py  test_cli.py  test_github_client.py
